--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linx | Home</title>
 
+    <script src="assets/js/main.js" defer></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -90,7 +92,7 @@
                 </div>
 
                 <div class="btn-request">
-                <button type="button">Ainda mais produtos aqui!</button>
+                <button type="button" onclick="getAllProducts(url)">Ainda mais produtos aqui!</button>
                 </div>
             </section>
 
@@ -143,6 +145,6 @@
         </footer>
     </main>
 
-    <script src="assets/js/main.js"></script>
+
 </body>
 </html>
